src/test/pass/generics_empty_list_default.ly
function f[A](list[A] value) {
	value = []
}
