src/test/fail/function_list_arg_redeclaration.ly
<@lily function f(list[integer] a, list[integer] a) {} @>
